# game-library

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
apps/ai-pinochle/: .gitignore  CLAUDE.md  Caddyfile  Dockerfile  RULES.md  deploy.sh  design.md  docker-compose.yml  package-lock.json  package.json  start.sh
apps/ai-pinochle/server/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/ai-pinochle/server/alembic/: env.py
apps/ai-pinochle/server/alembic/versions/: 0001_create_initial_schema.py  0002_add_name_fields.py  0003_add_game_version_and_widen_trick_cards.py  0004_add_user_achievements.py
apps/ai-pinochle/server/app/: config.py  database.py  main.py
apps/ai-pinochle/server/app/api/: auth.py  dependencies.py  games.py  users.py
apps/ai-pinochle/server/app/bot/: __init__.py  scheduler.py  strategy.py  users.py
apps/ai-pinochle/server/app/engine/: constants.py  deck.py  errors.py  meld.py  scoring.py  state_machine.py  tricks.py
apps/ai-pinochle/server/app/engine/actions/: __init__.py  acknowledge_hand_result.py  acknowledge_meld.py  declare_trump.py  pass_cards.py  play_card.py  rematch.py  start_game.py  submit_bid.py
apps/ai-pinochle/server/app/models/: __init__.py  achievement.py  game.py  user.py
apps/ai-pinochle/server/app/persistence/: achievements.py  analytics.py
apps/ai-pinochle/server/app/websocket/: analytics_sink.py  background.py  broker.py  connection_manager.py  errors.py  event_bus.py  game_logger.py  handlers.py  routes.py  state_io.py
apps/ai-pinochle/server/tests/: conftest.py  test_achievements.py  test_auth_endpoints.py  test_auth_models.py  test_auth_token.py  test_bot.py  test_bot_start_game.py  test_database.py  test_deck.py  test_disconnect_forfeit.py  test_game_endpoints.py  test_hint.py  test_input_validation.py  test_lobby_swap_kick.py  test_meld.py  test_optimistic_lock.py  test_persistence.py  test_reconnect_snapshot.py  test_redis_broker.py  test_reducers.py  test_reducers_more.py  test_rematch.py  test_replay.py  test_scoring.py  test_seat_race.py  test_websocket.py  test_ws_jwt_revalidation.py
apps/backgammon/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  (+2 more)
infra/: .env.example  Caddyfile  docker-compose.yml  init-databases.sql
(+730 files in other folders)
