[project]
name = "pinochle-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.30",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
