[project]
name = "pinochle-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
    "email-validator>=2.1",
    # asyncio support is bundled since redis-py 5 (no extra required)
    "redis>=5",
    "google-auth>=2.40",
    # Transport backend for google.auth.transport.requests (Google token verify).
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
